<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".billDetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDetailBill"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="Bill \nDetail"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldDetailBillName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDetailBillName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Bill Name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldDetailBillDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDetailBillDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_date_range_24"
                    android:focusable="false"
                    android:hint="Bill Date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldDetailBillAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tobiasschuerg.prefixsuffix.PrefixSuffixEditText
                    android:id="@+id/tietDetailBillAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Amount"
                    android:inputType="number"
                    app:prefix="$"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdateBill"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/black"
                    android:text="UPDATE BILL" />

                <Button
                    android:id="@+id/btnDeleteBill"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/design_default_color_error"
                    android:layout_margin="4dp"
                    android:text="DELETE BILL" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>