...
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldAddBillName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietAddBillName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Bill Name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldAddBillDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietAddBillDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_date_range_24"
                    android:focusable="false"
                    android:hint="Bill Date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldAddBillAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <com.tobiasschuerg.prefixsuffix.PrefixSuffixEditText
                    android:id="@+id/tietAddBillAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Amount"
                    android:inputType="number"
                    app:prefix="$"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddBillButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"

                android:text="ADD BILL" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
